# simple-bench

./: Cargo.toml  README.md
benches/: default.rs  one_input.rs  random.rs  range.rs
src/: lib.rs  util.rs
