[package]
name = "simple-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
# Update paths on your system
# simplicity_sys is not available via git
simplicity = { path = "/home/user/simplicity/rust-simplicity" }
simplicity_sys = { path = "/home/user/simplicity/rust-simplicity/simplicity-sys" }
bitcoin_hashes = "0.11"
elements = "0.21.1"

[dev-dependencies]
criterion = "0.4"

# Uncomment if benches/core.rs is present
#[[bench]]
#name = "core"
#harness = false

# Uncomment if benches/bitcoin.rs is present
#[[bench]]
#name = "bitcoin"
#harness = false

# Uncomment if benches/elements.rs is present
#[[bench]]
#name = "elements"
#harness = false

[[bench]]
name = "default"
harness = false

[[bench]]
name = "one_input"
harness = false

[[bench]]
name = "range"
harness = false

[[bench]]
name = "random"
harness = false
